--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <div class="text1"><a href="#">打字游戏</a></div>
         </div>
         <div class="grid_4">
-          <a href="" class="gall_item"><img src="images/page3_img5.jpg" alt=""></a>
+          <a href="./snake" class="gall_item"><img src="images/page3_img5.jpg" alt=""></a>
           <div class="text1"><a href="#">贪吃蛇</a></div>
         </div>
         <div class="grid_4">
@@ -170,7 +170,7 @@
         </div>
         <div class="clear sep__4"></div>
         <div class="grid_4">
-          <a href="/clock" class="gall_item"><img src="images/page3_img7.jpg" alt=""></a>
+          <a href="/clock" class="gall_item" target="_blank"><img src="images/page3_img7.jpg" alt=""></a>
           <div class="text1"><a href="#">钟表</a></div>
         </div>
         <div class="grid_4">
